--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <script type="text/javascript" src="js/game.js"></script>
 
+    <script type="text/javascript" src="js/teclas.js"></script>
+
 
 
 </body>
