--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <script type="text/javascript" src="js/teclas.js"></script>
 
+    <script type="text/javascript" src="js/arquero.js"></script>
+
 
 
 </body>
