--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prototipo MMORPG</title>
-    <!-- <link rel="stylesheet" href="css/estilo.css" media="">
-    <link rel="stylesheet" href="css/interfaz.css"> -->
+    <link rel="stylesheet" href="css/estilo.css" media="">
+    
 </head>
 
 <body>
